src/objects/TissueSpecimenDetail__c.object
<CustomObject>
    <fields>
        <fullName>CRFId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRFId</label>
        <referenceTo>CRF__c</referenceTo>
        <relationshipName>TissueSpecimenDetail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Time__c</fullName>
        <label>Effective Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Save_and_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Save and Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guidance_Method_s__c</fullName>
        <label>Guidance Method(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Ultrasound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mammography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stereotactic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palpation guided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsCaTissueDone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCaTissueDone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberOfSamplesCollected__c</fullName>
        <label>NumberOfSamplesCollected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OriginalCRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OriginalCRF</label>
        <referenceTo>TissueSpecimenDetail__c</referenceTo>
        <relationshipLabel>Tissue Specimen Details</relationshipLabel>
        <relationshipName>Tissue_Specimen_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Guidance_Method__c</fullName>
        <label>Other (Guidance Method)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Reason_not_all_samples_collected__c</fullName>
        <label>Other (Reason not all samples collected)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PatientConsentedOutsideStudy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Patient consented to use specimen for research outside of this study.</description>
        <inlineHelpText>Patient consented to use specimen for research outside of this study.</inlineHelpText>
        <label>Patient Consented Outside Study</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PatientConsentedStudy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Patient consented to use specimen for this study.</description>
        <inlineHelpText>Patient consented to use specimen for this study.</inlineHelpText>
        <label>Patient Consented Study</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>Patient_Custom__c</referenceTo>
        <relationshipName>TissueSpecimenDetail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Screening</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProcedureDate__c</fullName>
        <label>Procedure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_all_samples_not_collected__c</fullName>
        <label>Reason all samples not collected</label>
        <picklist>
            <picklistValues>
                <fullName>Patient Refused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Root_CRF_Id__c</fullName>
        <label>Root CRF Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approval Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted by Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TestHarnessId__c</fullName>
        <externalId>true</externalId>
        <label>TestHarnessId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Point__c</fullName>
        <label>Time Point</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Treatment Re-Biopsy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Surgery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TrialPatient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TrialPatient</label>
        <referenceTo>TrialPatient__c</referenceTo>
        <relationshipLabel>Tissue Specimen CRF</relationshipLabel>
        <relationshipName>TissueSpecimenDetail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pg_Tissuespecimen_Id__c</fullName>
        <label>pg_Tissuespecimen_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pg_status__c</fullName>
        <label>pg_status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Tissue Specimen Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tissue Specimen Details</pluralLabel>
    <recordTypes>
        <fullName>ADHOC</fullName>
        <active>true</active>
        <label>ADHOC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Approval_Pending</fullName>
        <active>true</active>
        <label>Approval Pending</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live</fullName>
        <active>true</active>
        <label>Live</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ValidateProcedureDate</fullName>
        <active>false</active>
        <description>Procedure Date must be earlier than or equal to the date that the form is being completed.</description>
        <errorConditionFormula>ProcedureDate__c &gt;  TODAY()</errorConditionFormula>
        <errorMessage>Date must be earlier than or equal to the date that the form is being completed.</errorMessage>
    </validationRules>
</CustomObject>